--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,10 @@ body {
 */
 
 /* flex center */
-#container,
-#num_of_squares_btn_div {
+#num_of_squares_btn_div,
+/* #grid_container, */
+.row,
+.flex_container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,4 +46,16 @@ body {
 }
 #num_of_squares_btn:hover {
     cursor: pointer;
+}
+
+#grid_container {
+    width: 40%;
+    height: 400px;
+}
+
+.grid {
+    border: 2px solid black;
+    background-color: white;
+    width: 30px;
+    height: 30px;
 }
