--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,13 @@ body {
 }
 
 #grid_container {
-    width: 40%;
+    width: 38%;
     height: 400px;
 }
 
-.grid {
-    border: 2px solid black;
+.grid_square {
+    border: 1px solid black;
     background-color: white;
-    width: 30px;
-    height: 30px;
+    /* width: 30px;
+    height: 30px; */
 }
