--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     margin: 0; /* space between the borders of a box and the borders of adjacent boxes. vertical margins overlap, largest value applied */
     box-sizing: border-box; /* ensure that if width and height elements are set for an object they include p, m ,b */
     line-height: 1.5;
-    outline: 1px dashed rgba(55, 52, 235, 0.623);
+    /* outline: 1px dashed rgba(55, 52, 235, 0.623); */
 }
 
 body {
@@ -49,13 +49,19 @@ body {
 }
 
 #grid_container {
-    width: 38%;
+    width: 39%;
     height: 400px;
+    /* background-color: white; */
 }
 
 .grid_square {
     border: 1px solid black;
-    background-color: white;
-    /* width: 30px;
-    height: 30px; */
+    /* background-color: rgb(255, 255, 255); */
+    
+}
+
+.grid_square:hover {
+    background-color: blue;
+
+    
 }
